; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_fits.c_dict_set_if_not_null.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_fits.c_dict_set_if_not_null.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32***, i8*, i8*)* @dict_set_if_not_null to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dict_set_if_not_null(i32*** %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32***, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32*** %0, i32**** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32***, i32**** %4, align 8
  %8 = icmp ne i32*** %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %3
  %10 = load i32***, i32**** %4, align 8
  %11 = load i32**, i32*** %10, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @av_dict_set(i32** %11, i8* %12, i8* %13, i32 0)
  br label %15

15:                                               ; preds = %9, %3
  ret i32 0
}

declare dso_local i32 @av_dict_set(i32**, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
